tests/unit-fail/j088a.ref
Error: CCV5
Description: casting empty value to type other than void.
Type: Undefined behavior.
See also: C11 sec. 6.3.2.2
  at f(j088a.c:4)
  at main(j088a.c:4)
  at <file-scope>(<unknown>)
